<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TP2">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/btn_40dp"
            android:textColor="@color/blanc" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/btn_40dp"
            android:textColor="@color/blanc" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignTop="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:background="@color/rouge"
            android:gravity="center"
            android:text="@string/btn_160dp"
            android:textColor="@color/blanc" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:background="@color/vert"
            android:gravity="center"
            android:text="@string/btn_80dp"
            android:textColor="@color/blanc" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:background="@color/vert"
            android:gravity="center"
            android:text="@string/btn_80dp"
            android:textColor="@color/blanc" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>